apps/matrix/middleware-default-mas-cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mas-cors
  namespace: default
spec:
  headers:
    accessControlAllowHeaders:
    - Origin
    - X-Requested-With
    - Content-Type
    - Accept
    - Authorization
    accessControlAllowMethods:
    - GET
    - POST
    - PUT
    - DELETE
    - OPTIONS
    accessControlAllowOriginList:
    - https://matrix-admin.brmartin.co.uk
    - https://element.brmartin.co.uk
    - https://cinny.brmartin.co.uk
    - https://matrix.brmartin.co.uk
