apps/matrix/middleware-default-wellknown-cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wellknown-cors
  namespace: default
spec:
  headers:
    accessControlAllowOriginList:
    - '*'
