apps/matrix/deployment-default-cinny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matrix
    component: cinny
  name: cinny
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: matrix
      component: cinny
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.matrix
      labels:
        app: matrix
        component: cinny
    spec:
      automountServiceAccountToken: true
      containers:
      - image: ghcr.io/cinnyapp/cinny:v4.11.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 5
        name: cinny
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 5
        resources:
          limits:
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/config.json
          mountPropagation: None
          name: config
          subPath: config.json
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: cinny-config
          optional: false
        name: config
