apps/matrix/deployment-default-mas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matrix
    component: mas
  name: mas
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: matrix
      component: mas
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.matrix
      labels:
        app: matrix
        component: mas
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: MAS_CONFIG
          value: /config/config.yaml
        image: ghcr.io/element-hq/matrix-authentication-service
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: mas
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 192Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          mountPropagation: None
          name: config
          readOnly: true
        - mountPath: /keys
          mountPropagation: None
          name: keys
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: mas-config-template
          optional: false
        name: config-template
      - emptyDir: {}
        name: config
      - name: keys
        secret:
          defaultMode: 420
          items:
          - key: mas_key_rsa
            path: mas_key_rsa
          - key: mas_key_ec_p256
            path: mas_key_ec_p256
          - key: mas_key_ec_p384
            path: mas_key_ec_p384
          - key: mas_key_ec_k256
            path: mas_key_ec_k256
          optional: false
          secretName: matrix-secrets
