apps/matrix/deployment-default-synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matrix
    component: synapse
  name: synapse
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: matrix
      component: synapse
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.matrix
      labels:
        app: matrix
        component: synapse
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: SYNAPSE_CONFIG_PATH
          value: /config/homeserver.yaml
        - name: SYNAPSE_WORKER
          value: synapse.app.homeserver
        image: ghcr.io/element-hq/synapse:v1.151.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8008
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        name: synapse
        ports:
        - containerPort: 8008
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8008
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          mountPropagation: None
          name: config
        - mountPath: /data
          mountPropagation: HostToContainer
          name: data
        - mountPath: /media_store
          mountPropagation: HostToContainer
          name: media-store
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 991
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: synapse-config
          optional: false
        name: config-template
      - emptyDir: {}
        name: config
      - name: data
        persistentVolumeClaim:
          claimName: matrix-synapse-data-sw
      - name: media-store
        persistentVolumeClaim:
          claimName: matrix-media-store-sw
