apps/matrix/deployment-default-whatsapp-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matrix
    component: whatsapp-bridge
  name: whatsapp-bridge
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: matrix
      component: whatsapp-bridge
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.matrix
      labels:
        app: matrix
        component: whatsapp-bridge
    spec:
      automountServiceAccountToken: true
      containers:
      - image: dock.mau.dev/mautrix/whatsapp:v0.2604.0
        imagePullPolicy: IfNotPresent
        name: whatsapp-bridge
        ports:
        - containerPort: 8082
          protocol: TCP
        resources:
          limits:
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 16Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          mountPropagation: HostToContainer
          name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: matrix-whatsapp-data-sw
