apps/matrix/service-default-cinny.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matrix
    component: cinny
  name: cinny
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: matrix
    component: cinny
  sessionAffinity: None
  type: ClusterIP
