apps/matrix/service-default-element-admin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matrix
    component: element-admin
  name: element-admin
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: matrix
    component: element-admin
  sessionAffinity: None
  type: ClusterIP
