apps/matrix/service-default-element.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matrix
    component: element
  name: element
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: matrix
    component: element
  sessionAffinity: None
  type: ClusterIP
