apps/matrix/service-default-mas.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matrix
    component: mas
  name: mas
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: matrix
    component: mas
  sessionAffinity: None
  type: ClusterIP
