apps/matrix/service-default-matrix-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matrix
    component: nginx
  name: matrix-nginx
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: matrix
    component: nginx
  sessionAffinity: None
  type: ClusterIP
