apps/matrix/service-default-synapse.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matrix
    component: synapse
  name: synapse
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8008
    protocol: TCP
    targetPort: 8008
  selector:
    app: matrix
    component: synapse
  sessionAffinity: None
  type: ClusterIP
