apps/matrix/service-default-whatsapp-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matrix
    component: whatsapp-bridge
  name: whatsapp-bridge
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: matrix
    component: whatsapp-bridge
  sessionAffinity: None
  type: ClusterIP
