apps/matrix/ingressroute-default-cinny.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: matrix
    component: cinny
  name: cinny
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`cinny.brmartin.co.uk`)
    services:
    - name: cinny
      port: 80
  tls:
    secretName: wildcard-brmartin-tls
