apps/matrix/ingressroute-default-element-admin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: matrix
    component: element-admin
  name: element-admin
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`matrix-admin.brmartin.co.uk`)
    services:
    - name: element-admin
      port: 8080
  tls:
    secretName: wildcard-brmartin-tls
