apps/matrix/ingressroute-default-element.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: matrix
    component: element
  name: element
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`element.brmartin.co.uk`)
    services:
    - name: element
      port: 80
  tls:
    secretName: wildcard-brmartin-tls
