apps/matrix/ingressroute-default-mas.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: matrix
    component: mas
  name: mas
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`mas.brmartin.co.uk`) || (Host(`matrix.brmartin.co.uk`) && PathRegexp(`^/_matrix/client/(.*)/(login|logout|refresh)`))
    middlewares:
    - name: mas-cors
      namespace: default
    priority: 100
    services:
    - name: mas
      port: 8081
  tls:
    secretName: wildcard-brmartin-tls
